pkl-core/src/test/files/LanguageSnippetTests/input/errors/const/constLocalAmendModule.pkl
amends ".../input-helper/modules/Birds2.pkl"

const local myBirdName = "Birdy"

local class MyBird extends Bird {
  name: String = myBirdName
}

bird = new MyBird {}
